# filehub-desktop

./: .gitignore  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  filehub.yml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  indexer.rs  lib.rs  main.rs  preview.rs  server.rs
