[package]
name = "filehub-desktop"
version = "1.0.3"
edition = "2021"

[lib]
name = "filehub_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "filehub-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "custom-protocol"] }
tauri-plugin-shell = "2"
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
regex = "1"
base64 = "0.22"
mime_guess = "2"
zip = "2"
encoding_rs = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2"
